# dogfood-readiness

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: dogfood-readiness.yml
docs/: no-mistakes-fusion.md
dogfood_readiness/: __init__.py  __main__.py  cli.py  goal.py  inventory.py  model.py  render.py  score.py
examples/: garnet-phase6ax.json
scripts/: check_github_actions_node24.py  check_pr_body.py
skills/dogfood-readiness/: SKILL.md
templates/: pr-body.md
tests/: test_cli.py  test_cli_goal.py  test_github_actions_node24.py  test_goal.py  test_inventory.py  test_merge_confidence.py  test_pr_body.py  test_render.py  test_score.py
