[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dogfood-readiness"
version = "0.1.0"
description = "Evidence-first dogfood readiness audit tooling for PRs, apps, languages, and agentic systems."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Island Development Crew"}]

[project.scripts]
dogfood-readiness = "dogfood_readiness.cli:main"

